fixes overflow-wrap for long tweets again

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -12,6 +12,7 @@
 
 #tweetContainer {
   width: 100%;
+  overflow-wrap: break-word;
   
 }
 
@@ -66,6 +67,10 @@
   outline: none;
   background-color: transparent;
   resize: none;
+}
+
+.lower {
+  overflow-wrap: break-word;
 }
 
 .errors {
